[gd_scene load_steps=8 format=3 uid="uid://2krl5h5rfb36"]

[ext_resource type="Script" path="res://scenes/menu/menu.gd" id="1_yu23b"]
[ext_resource type="Texture2D" uid="uid://dgebn86r5undy" path="res://assets/menubg.png" id="2_cy1qk"]
[ext_resource type="AudioStream" uid="uid://c0mn58khn0ulk" path="res://sfx/menu.mp3" id="3_ao8oq"]
[ext_resource type="Texture2D" uid="uid://bkk1xq0kkv0r0" path="res://assets/bialy_gradient.png" id="3_ehyfp"]
[ext_resource type="FontFile" uid="uid://d36jq6ah42c8x" path="res://AmaticSC-Regular.ttf" id="4_k53qy"]
[ext_resource type="FontFile" uid="uid://dd4uc8nh0wg3v" path="res://AmaticSC-Bold.ttf" id="5_gxutr"]
[ext_resource type="AudioStream" uid="uid://cciqsgkf6mdb3" path="res://sfx/hover.mp3" id="7_02st0"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yu23b")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cy1qk")
expand_mode = 1
stretch_mode = 4

[node name="Grad" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ehyfp")
expand_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -339.0
offset_top = 160.0
offset_right = -269.0
offset_bottom = 262.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_k53qy")
theme_override_font_sizes/font_size = 64
text = "the"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -217.5
offset_top = 120.0
offset_right = 217.5
offset_bottom = 262.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_gxutr")
theme_override_font_sizes/font_size = 112
text = "memory  book"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 511.0
offset_top = -65.0
offset_right = 689.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2

[node name="Label" type="Label" parent="StartButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(90, 52)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_k53qy")
theme_override_font_sizes/font_size = 80
text = "start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TutorialButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 515.0
offset_top = 42.0
offset_right = 755.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2

[node name="Label" type="Label" parent="TutorialButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(120, 50)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_k53qy")
theme_override_font_sizes/font_size = 80
text = "tutorial"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 523.0
offset_top = 144.0
offset_right = 714.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2

[node name="Label" type="Label" parent="CreditsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(95, 50)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_k53qy")
theme_override_font_sizes/font_size = 80
text = "credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 513.0
offset_top = 328.0
offset_right = 653.0
offset_bottom = 421.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2

[node name="Label" type="Label" parent="ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(70, 50)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_k53qy")
theme_override_font_sizes/font_size = 80
text = "exit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ao8oq")

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_02st0")
volume_db = -18.0

[connection signal="mouse_entered" from="StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="StartButton" to="." method="_on_start_button_mouse_exited"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="TutorialButton" to="." method="_on_tutorial_button_mouse_entered"]
[connection signal="mouse_exited" from="TutorialButton" to="." method="_on_tutorial_button_mouse_exited"]
[connection signal="pressed" from="TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="mouse_entered" from="CreditsButton" to="." method="_on_credits_button_mouse_entered"]
[connection signal="mouse_exited" from="CreditsButton" to="." method="_on_credits_button_mouse_exited"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="mouse_entered" from="ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="ExitButton" to="." method="_on_exit_button_mouse_exited"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
